<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CalendarActivity">

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="414dp"
            android:layout_height="294dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/entry_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#00FFFFFF"
            android:onClick="Save_entry"
            android:text="ADD ENTRY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="309dp"
            android:text="@string/symptoms"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendar_view" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:text="CRACKING"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="46dp"
            android:layout_height="19dp"
            android:layout_marginTop="12dp"
            android:text="ITCHY"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_itchy" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OOZING"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DRY"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FLAKING"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BLEEDING"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="45dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/meds"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView_cracking"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/foto_cracking"
            app:layout_constraintEnd_toStartOf="@+id/imageView_oozing"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_itchy"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/cracking" />

        <ImageView
            android:id="@+id/imageView_dry"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/dry"
            app:layout_constraintEnd_toStartOf="@+id/imageView_flaking"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_bleeding"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/dry" />

        <ImageView
            android:id="@+id/imageView_oozing"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView_bleeding"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_cracking"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/oozing" />

        <ImageView
            android:id="@+id/imageView_bleeding"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView_dry"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_oozing"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/bleeding" />

        <ImageView
            android:id="@+id/imageView_flaking"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_dry"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/flaking" />

        <ImageView
            android:id="@+id/imageView_itchy"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView_cracking"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@drawable/itchy" />

        <ImageView
            android:id="@+id/imageView_medicine"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/medicine" />

        <ImageView
            android:id="@+id/imageView_ointment"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="279dp"
            android:layout_marginRight="279dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_medicine"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:srcCompat="@drawable/ointment" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="11dp"
            android:text="TABLETS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_medicine" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="271dp"
            android:text="CREAM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView_ointment" />

        <Button
            android:id="@+id/takephoto"
            android:layout_width="104dp"
            android:layout_height="51dp"
            android:layout_marginEnd="288dp"
            android:layout_marginBottom="36dp"
            android:background="@color/colorAccent"
            android:text="TAKE PHOTO"
            app:layout_constraintBottom_toTopOf="@+id/entry_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="172dp"
            android:layout_height="232dp"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/entry_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:srcCompat="@drawable/ic_menu_gallery" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>